-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.8.0 Alpha
-
None
-
Windows 10 , MSVC 2015 U3, 64 bit
OS X 10.10
OpenSUSE 42.1
-
9d2169a2d8b81b8707b20ab892550f4a55c07feb
Run 2 tests in a sequence:
debug\tst_dialogs.exe fileDialogDefaultModality fileDialogNonModal -nocrashhandler
Note warning
"There are still \"1\" items in the process of being created at engine destruction."
and crash.
| For Gerrit Dashboard: QTBUG-56471 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 173667,5 | V4: Fix usage of QV4::Value tags/types | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 174223,3 | V4: Fix usage of QV4::Value tags/types | 5.7.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |