V4: Fix usage of QV4::Value tags/types

These two were mixed, but have completely different values.

Task-number: QTBUG-56471
(cherry picked from commit 9d2169a2d8b81b8707b20ab892550f4a55c07feb)
Change-Id: I6745521ea4356acdd710285084cce8e965bfc072
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>